# DeckCAD

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  DeckCAD.code-workspace  build-docker.sh  build-local.sh  cmakelists.txt
Docker/: Dockerfile  Makefile
src/: ClayPrimitives.h  GeometryMath.h  SceneManager.h  canvas.cpp  canvasorigin.cpp  geometry.h  geometry_math.h  keyconfig.h  main.cpp  scene.h  sketch.cpp  sketch.h  ui_components.h  workbench.cpp
src/Layout/Render/: LayoutRenderer.cpp  LayoutRenderer.h
src/Layout/Style/: FontStyle.h
src/UI/: components.h  theme.h
src/UI/Layout/: ClayRender.cpp  ClayRender.h
src/UI/Style/: StyleLoader.h
src/Workbench/: Workbench.h
src/Workbench/Canvas/: Canvas.cpp  CanvasHelpers.cpp  CanvasPlanes.cpp  RenderHandler.cpp  RenderHandler.h
src/Workbench/Explorer/: Explorer.cpp
src/Workbench/Scene/: Scene.h  SceneCamera.cpp  SceneCamera.h  SceneManager.h
src/Workbench/Toolbox/: Toolbox.cpp
src/components/: canvas.cpp
